# WeirdNumber

./: .clang-format  CMakeLists.txt  README.md  number.cpp  number.hpp  test.cpp
